--- a/app/src/main/res/layout/activity_pro_file.xml
+++ b/app/src/main/res/layout/activity_pro_file.xml
@@ -128,25 +128,25 @@
                     <ListView
                         android:id="@+id/profile1List1"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
                     <ListView
                         android:id="@+id/profile1List2"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
                     <ListView
                         android:id="@+id/profile1List3"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
                     <ListView
                         android:id="@+id/profile1List4"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
