--- a/app/src/main/res/layout/activity_pro_file.xml
+++ b/app/src/main/res/layout/activity_pro_file.xml
@@ -113,40 +113,46 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_weight="1"
-                android:background="@drawable/rounded" >
+                android:background="@drawable/rounded">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:baselineAligned="false"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:baselineAligned="false">
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <ListView
                         android:id="@+id/profile1List1"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:drawingCacheQuality="high"
+                        android:textAlignment="center"
+                        android:textColor="@color/black" />
 
                     <ListView
+                        android:textColor="@color/black"
                         android:id="@+id/profile1List2"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1" />
 
                     <ListView
+                        android:textColor="@color/background"
                         android:id="@+id/profile1List3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_weight="1" />
 
                     <ListView
+                        android:textColor="@color/background"
                         android:id="@+id/profile1List4"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -213,24 +219,28 @@
                     android:baselineAligned="false">
 
                     <ListView
+                        android:textColor="#000000"
                         android:id="@+id/profile3List1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1" />
 
                     <ListView
+                        android:textColor="#000000"
                         android:id="@+id/profile3List2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1" />
 
                     <ListView
+                        android:textColor="#000000"
                         android:id="@+id/profile3List3"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1" />
 
                     <ListView
+                        android:textColor="#000000"
                         android:id="@+id/profile3List4"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
